# selenium_web_scraping

./: .env.example  .flake8  .gitignore  pyproject.toml  settings.py
selenium_web_scraping/: main.py
selenium_web_scraping/services/: write_to_csv_table.py
